Added a command to .drone.yml

--- a/.drone.yml
+++ b/.drone.yml
@@ -1,7 +1,8 @@
 image: bradrydzewski/java:openjdk7
 env:
   - GOPATH=/var/cache/drone
-  - some=thing
+script:
+  - pwd
 notify:
   email:
     recipients:
