- Added a Dockerfile. Will build a scala image with my app. - Added .dockerignore - updated .drone.yml to publish to DockerHub - On server: Added several settings to insert into .drone.yml

--- a/.drone.yml
+++ b/.drone.yml
@@ -8,3 +8,18 @@ notify:
   email:
     recipients:
       - manuel.maldonado@verizon.com
+publish:
+    docker:
+        dockerfile: Dockerfile
+        docker_host: {{docker_host}}
+        docker_port: {{docker_post}}
+        docker_version: {{docker_version}}
+        registry_login_url: https://docker-registry.example.com/v1/
+        registry_login: true
+        username: {{username}}
+        password: {{password}}
+        email: {{email}}
+        image_name: {{username}}/dronetest
+        push_latest: true
+        keep_builds: false
+        tag: 0.1
